--- a/src/styles/CreateVehicle.module.scss
+++ b/src/styles/CreateVehicle.module.scss
@@ -1,19 +1,87 @@
 @import 'vars';
 
-.container {  display: grid;
-    grid-template-columns: 0.2fr 0.8fr;
-    grid-template-rows: 1fr;
-    grid-auto-columns: 1fr;
-    gap: 10px 10px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "menu content";
+.formContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.sectionForm{
+    display: grid; 
+    grid-template-columns: 0.8fr 0.2fr; 
+    grid-template-rows: 1fr; 
+    grid-template-areas: 
+        "titleSectionForm contentSectionForm"; 
 }
 
-Menu {
-    grid-area: menu;
+.inputContainer{
+    position: relative;
+    margin-bottom: 2vh;
+    width: 400px;
+    height: 50px;
+}
+.input{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    border: 1px solid var(--sky-blue);
+    border-radius: 7px;
+    font-size: 16px;
+    padding: 0 20px;
+    outline: none;
+    background: none;
+    z-index: 1;
+}
+.label {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    padding: 0 4px;
+    background-color: white;
+    color: var(--dark-gray);
+    font-size: 16px;
+    transition: 0.5s;
+    z-index: 0;
+}
+.submitBtn{
+    display: grid;
+    justify-content: center;
+    margin-bottom: 2vh;
+}
+.submitBtn button{
+    padding: 13px 35px;
+    border: none;
+    background-color: var(--sky-blue);
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
 }
 
-.content { 
-    grid-area: content; 
+.submitBtn button:hover {
+    background-color: var(--sky-blue);
+    transform: translateY(-2px);
+}
+.input:focus + .label {
+    top: -7px;
+    left: 3px;
+    z-index: 10;
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--sky-blue);
+}
+.input:focus {
+    border: 2px solid var(--sky-blue);
+}
+.input:not(:placeholder-shown)+ .label {
+    top: -7px;
+    left: 3px;
+    z-index: 10;
+}
+@media (max-width:640px) {
+    .sectionForm{
+        display: flex;
+        flex-direction: column; 
+    }
 }
