--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -47,7 +47,7 @@ h3{
 .form-container{
     display: grid;
     grid-template-rows: auto 1fr auto;
-    width: 35vw;
+    width: 30vw;
 }
 .input-container{
     position: relative;
@@ -85,7 +85,7 @@ h3{
     justify-content: center;
     margin-top: 80px;
 }
-.submitBtn input{
+.submitBtn button{
     padding: 13px 35px;
     border: none;
     background-color: var(--sky-blue);
@@ -95,7 +95,7 @@ h3{
     font-size: 16px;
 }
 
-.submitBtn input:hover {
+.submitBtn button:hover {
     background-color: var(--sky-blue);
     transform: translateY(-2px);
 }
@@ -125,7 +125,7 @@ h3{
         grid-auto-columns: 1fr; 
         grid-template-columns: 1fr 1fr; 
         grid-template-rows: 0.5fr 0.5fr; 
-        padding: 15px;
+        padding: 30px 0px 0px 0px;
         grid-template-areas: 
             "image logo"
             "image nombre_empresa";
@@ -135,7 +135,7 @@ h3{
     }
     .identidad-corp-container h1{
         grid-area: logo;
-        padding-top: 5px;
+        padding-top: 40px;
     }
     .identidad-corp-container h3{
         grid-area: nombre_empresa;
@@ -145,6 +145,7 @@ h3{
     .form-container{
         display: grid;
         grid-template-rows: auto 1fr auto;
-        width: 60vw;
+        width: 50vw;
+        padding-top: 4vh;
     }
 }
