--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -1,20 +1,19 @@
-
-.navBar{
-    background-color: var(--white);
+.navbar {
+    background-color: #060b26;
     height: 80px;
     display: flex;
     justify-content: start;
     align-items: center;
-}
-
-.menu-bars{
+  }
+  
+  .menu-bars {
     margin-left: 2rem;
     font-size: 2rem;
     background: none;
-}
-
-.nav-menu{
-    background-color: var(--dark-gray);
+  }
+  
+  .nav-menu {
+    background-color: #060b26;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -23,25 +22,29 @@
     top: 0;
     left: -100%;
     transition: 850ms;
-}
-
-.nav-menu.active{
+  }
+  
+  .nav-menu.active {
     left: 0;
     transition: 350ms;
-}
-
-.nav-text{
-    display:flex;
+    z-index: 100;
+  }
+  
+  .nav-text {
+    display: flex;
     justify-content: start;
     align-items: center;
     padding: 8px 0px 8px 16px;
     list-style: none;
     height: 60px;
-}
-
-.nav-text a{
+    margin:0;
+    padding:0;
+    
+  }
+  
+  .nav-text a {
     text-decoration: none;
-    color: var(--sky-blue);
+    color: #f5f5f5;
     font-size: 18px;
     width: 95%;
     height: 100%;
@@ -49,32 +52,25 @@
     align-items: center;
     padding: 0 16px;
     border-radius: 4px;
-    background-color: var(--white);
-}
-
-.nav-text a:hover{
-    background-color: var(--oxford-blue);
-}
-
-.nav-menu-items{
+  }
+  
+  .nav-text a:hover {
+    background-color: #1a83ff;
+  }
+  
+  .nav-menu-items {
     width: 100%;
-}
-.navbar-toggle {
-    background-color: var(--oxford-blue);
+  }
+  
+  .navbar-toggle {
+    background-color: #060b26;
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content:start;
-    align-items:center;
-    color: var(--white);
-}
-.navbar-toggle h1 span{
-    background: var(--sky-blue);
-    border-radius: 1vh;
-    padding: 2px 8px;
-    margin: 0 8px;
-}
-
-span{
+    justify-content: start;
+    align-items: center;
+  }
+  
+  span {
     margin-left: 16px;
-}
+  }
