Se corrigieron los estilos del login y la barra de navegacion

--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -4,7 +4,7 @@ h1{
     font-weight: bold;
 }
 h3{
-    color: var(--dark-gray);
+    color: var(--dark-gray) !important;
 }
 .contenedor{
     display: grid; 
