--- a/src/styles/ValidateOwner.module.scss
+++ b/src/styles/ValidateOwner.module.scss
@@ -11,6 +11,9 @@
     width: 40vw;
     justify-items: center;
 }
+.form-container h1{
+    margin-top: 5vh;
+}
 .headerForm{
     margin-bottom:4vh;
 }
