--- a/src/styles/CreateVehicle.module.scss
+++ b/src/styles/CreateVehicle.module.scss
@@ -5,6 +5,9 @@
     flex-direction: column;
     align-items: center;
 }
+.formContainer h1{
+    margin-top: 5vh;
+}
 .sectionForm{
     display: grid; 
     grid-template-columns: 0.8fr 0.2fr; 
