--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -1,5 +1,6 @@
+@import 'vars';
 .navbar {
-    background-color: #060b26;
+    background-color: var(--oxford-blue);
     height: 80px;
     display: flex;
     justify-content: start;
@@ -13,7 +14,7 @@
   }
   
   .nav-menu {
-    background-color: #060b26;
+    background-color: var(--oxford-blue);
     width: 250px;
     height: 100vh;
     display: flex;
@@ -45,7 +46,7 @@
   
   .nav-text a {
     text-decoration: none;
-    color: #f5f5f5;
+    color: var(--white);
     font-size: 18px;
     width: 95%;
     height: 100%;
@@ -56,8 +57,8 @@
   }
   
   .nav-text a:hover {
-    background-color: #1a83ff;
-    color: #fff;
+    background-color: var(--sky-blue);
+    color: var(--white);
   }
   
   .nav-menu-items {
@@ -65,7 +66,7 @@
   }
   
   .navbar-toggle {
-    background-color: #060b26;
+    background-color: var(--oxford-blue);
     width: 100%;
     height: 80px;
     display: flex;
