Se envían los datos del chequeo

--- a/src/styles/DailyCheck.module.scss
+++ b/src/styles/DailyCheck.module.scss
@@ -41,3 +41,7 @@
     background-color: var(--sky-blue);
     transform: translateY(-2px);
 }
+#imgSection{
+    width: 40px;
+    margin-right: 5vw;
+}
