--- a/src/styles/Dashboard.module.scss
+++ b/src/styles/Dashboard.module.scss
@@ -31,6 +31,12 @@
   border-radius: 10px;
   background-color: #fff;
 }
+.headerBarsGraph{
+  display: inline-flex;
+}
+.dropdown{
+  margin: 4px 6px;
+}
 .graphB{
   margin: 0px 90px;
 }
