--- a/src/styles/HeaderUser.module.scss
+++ b/src/styles/HeaderUser.module.scss
@@ -38,12 +38,12 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin-right: 20px;
+    margin-right: 30px;
   }
   @media (max-width:640px) {
     .header {
         height: 80px;
-        width: 130vw;
+        width: 100vw;
         display: grid; 
     grid-auto-columns: 1fr; 
     grid-template-columns: 0.5fr 0.5fr; 
@@ -64,8 +64,9 @@
     .logout{
         grid-area: logout;
         width: 45vw;
-        margin: 0px;
+        justify-content: center;
       }
+
     .logout button{
         font-size: 12px;
     }
