--- a/src/styles/Notifications.module.scss
+++ b/src/styles/Notifications.module.scss
@@ -1,23 +1,43 @@
-.item-list{
-    text-align: center;
-    overflow-y: scroll;
-    height: 80vh;
+.item-list {
+  text-align: center;
+  overflow-y: scroll;
+  height: 80vh;
 }
 
-.item-container{
-    display: flex;
-    background-color: aqua;
-    margin: 15px;
-    padding: 10px;
-    border-radius: 10px;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    "movil statement statement statement statement statement checkBtnContainer";
+  border: 1px solid #18a0fb;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 3px;
 }
 
-.item-movil{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.movil {
+  grid-area: movil;
+    justify-self: center;
+    align-self: center;
+}
+.movilCircle{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-right: 10px;
+    padding-top: 10px;
+}
+.statement {
+  grid-area: statement;
+  text-align: left;
+}
+.checkBtnContainer {
+    grid-area: checkBtnContainer;
+    justify-self: center;
+    align-self: center;
+    color: green;
+}
+.checkBtn:hover{
+    color: #00bd03;
 }
